[package]
name = "solana-gossip-conformance"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = "2024"
publish = false

[dependencies]
bincode = { workspace = true }
bv = { workspace = true, features = ["serde"] }
prost = "0.11"
protosol = "5.3.0"
solana-bloom = { workspace = true }
solana-gossip = { path = "..", version = "=4.1.0-alpha.0", features = [
    "agave-unstable-api",
    "conformance",
] }
solana-hash = { workspace = true }
solana-keypair = { workspace = true }
solana-packet = { workspace = true }
solana-perf = { workspace = true, features = ["agave-unstable-api"] }
solana-pubkey = { workspace = true }
solana-sanitize = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }
solana-vote-program = { workspace = true }

[lints]
workspace = true
